# Rk

./: .gitmodules
.github/workflows/: CPack.yml  Cpack.yml  build.yml  main.yml  mс.yml  test.yml
rk2/: CMakeLists.txt  Testy.cpp
rk2/_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
